# DeepInspect

./: .gitignore  CMakeLists.txt  main.cpp
app/: CMakeLists.txt  header.cpp  header.hpp  header.ui  homepage.cpp  homepage.hpp  homepage.ui  inspectpage.cpp  inspectpage.hpp  inspectpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  rotateSquarePage.cpp  rotateSquarePage.hpp  rotateSquarePage.ui
